<resources>
    <string name="app_name">Redmi Note 2 Tool</string>

    <string name="title_section1">CPU</string>
    <string name="title_section2">Other</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_setOnBoot">Set on Boot</string>

    <string name="action_save">Save&amp;Apply</string>

    <string name="action_default">Load suggested values</string>

    <string name="main_section_label">Max Frequency</string>
    <string name="unlimited">Unlimited</string>
    <string name="touchboost">Modify TouchBoost</string>
    <string name="cores">Cores</string>
    <string name="tbFrequency">Frequency</string>

    <string name="mount_label">Mount SD as ext4</string>
    <string name="cbAutoMount">Mount SD as ext4 on boot</string>
    <string name="formatSD">Format SD card to ext4</string>
    <string name="mountSD">Mount SD card as ext4</string>
    <string name="sched_label">I/O Scheduler</string>
    <string name="sys_mod_error">System modification error</string>
    <string name="sys_mod_error_message">For some reason the modification failed. Please check logcat for further information.</string>
    <string name="sys_inter_error">Interactive values not saved</string>
    <string name="sys_inter_error_message">For some reason the modification failed. Please check logcat for further information. Do you use any othet kernel/CPU tweak app?</string>
    <string name="sys_inter_suc">Success</string>
    <string name="sys_inter_suc_message">Interactive changes succesfully applied. If you enabled Set On Boot, make sure that the app has right to Autostart in MIUI Security.</string>
    <string name="sys_mod_success">System modified</string>
    <string name="sys_mod_success_message">System partition modified. You need to reboot for the changes to take effect</string>
    <string name="reboot_now">Reboot Now</string>
    <string name="reboot_later">Reboot Later</string>
    <string name="modify_tb_warning_message">You are about to modify the touchboost values. This means modifying a file on your system partition. If you do this, from now on the new values will be used until you update your ROM, or restore the values.</string>
    <string name="warning">WARNING</string>
    <string name="no_root">Root not available</string>
    <string name="no_root_message">Your phone is not rooted, or you didn\'t give permission to this app. Without root permission, this app will not work.</string>
    <string name="no_supersu_message">You are not using SuperSU, that means some functions will not work (e.g. SD ext4 mount). Please consider using SuperSU.</string>
    <string name="format_sd_message">This will format your SD Card, and erase all data on it! Only continue if you made backup, and know what your are doing!\nIf you are using SuperSU, make sure you have disabled \"Mount namespace separation\" in its settings!</string>
    <string name="do_format">Format card</string>
    <string name="missing_binaries">Missing binaries</string>
    <string name="missing_binaries_message">mke2fs not found! Do you have busybox installed?</string>
    <string name="format_complete">Format completed</string>
    <string name="format_complete_message">SD card formatted, mounted, and set for auto-mount on each reboot. Please check if you have enabled autostart for this app!</string>
    <string name="unable_umount">Unable to umount</string>
    <string name="unable_umount_message">Couldn\'t umount /mnt/media/rw/sdcard1. Please stop every other applications. If the problem persists, make a reboot.</string>
    <string name="unable_umount_message2">Couldn\'t umount /storage/sdcard1. Please stop every other applications. If the problem persists, make a reboot.</string>
    <string name="nothanks">No, thanks</string>
    <string name="tb_error">Error</string>
    <string name="tb_error_message">Couldn\'t read touchboost values!\nIf you are NOT using MIUI, don\'t worry about this.</string>
    <string name="no_inter">You are not using interactive</string>
    <string name="no_inter_message">You are not using interactive governor. This app can only work with interactive governor.</string>
    <string name="no_scaling">Error</string>
    <string name="no_scaling_message">Couldn\'t read CPU frequencies.</string>
    <string name="change_inter">Change to interactive</string>
    <string name="exit">Exit</string>
    <string name="set_inter_fail">Setting to interactive failed</string>
    <string name="set_inter_fail_message">You are probably using another tweak app that prevents me from changing governor.</string>
    <string name="set_inter_suc">Success</string>
    <string name="set_inter_suc_message">You are now using interactive.</string>
    <string name="mount_error">Error mounting SD card</string>
    <string name="mount_success">SD card mounted successfully</string>
    <string name="freq_error">Couldn\'t load frequency table</string>
    <string name="apply_error">Error applying values</string>
    <string name="apply_success">Values successfully applied</string>
    <string name="disable_cpu">Continue</string>
    <string name="tb_different">Touchboost values are different then your settings! Please open the app, and press Save!</string>
    <string name="on_system">On System</string>
    <string name="busybox_install_failed">Busybox install failed</string>
    <string name="busybox_install_failed_message">There was an error installing busybox binary.</string>
    <string name="take_a_minute">This can really take a minute...</string>
    <string name="error">ERROR</string>
    <string name="def">Default</string>
    <string name="profile">Profile (From the slowest response to the fastest)</string>
    <string name="rb_slow">SlowRamp - Default, might be better for gaming</string>
    <string name="rb_quick">QuickRamp - Experimental, better for AOSP/CyanogenMod and battery overall</string>
    <string name="rb_default">MIUI default</string>
    <string name="donate">Support the app - Donate</string>
    <string name="rb_gaming">Gaming</string>
    <string name="flash_twrp">Flash Recovery</string>
    <string name="recovery_flash_success">Recovery Flashed succesfully</string>
    <string name="recovery_flash_error">There was an error flashing recovery, please try again.</string>
    <string name="choose_recovery">Choose recovery</string>
    <string name="convert_backup">Convert TWRP2 backup to TWRP 3</string>
    <string name="convert_success">Converting success (If there was any backup)</string>
    <string name="convert_failed">Convert failed or backups not found</string>
    <string name="no_backup">Didn\'t find any TWRP backup.</string>
    <string name="check_root">Checking root</string>
    <string name="check_root_message">If you see this message for more than a few seconds, please check if you have root, and enabled Redmi Note 2 Tool!</string>
    <string name="recovery_download">Recovery download</string>
    <string name="recovery_download_need">Recovery files needed to be downloaded, please wait...</string>
    <string name="recovery_download_error">There was an error trying to download recovery.\nPlease try again later!</string>
    <string name="recovery_push_again">Please push the recovery flash button again!</string>
    <string name="please_wait">Please wait</string>
    <string name="cb_limitCore">Limit cores to</string>
    <string name="cbLimitGpuFreq">Limit GPU Frequency</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-6857992441643320/9849578919</string>
</resources>
