<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" tools:context="hu.xmister.hermestool.OtherFragment"
    android:columnCount="2"
    android:rowCount="5">

    <!-- TODO: Update blank fragment layout -->
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/mount_label"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbAutoMount"
        android:id="@+id/cbAutoMount"
        android:layout_column="0"
        android:layout_row="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formatSD"
        android:id="@+id/btFormat"
        android:layout_column="0"
        android:layout_row="2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mountSD"
        android:id="@+id/btMount"
        android:layout_column="0"
        android:layout_row="3" />

</GridLayout>
