<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:columnCount="2"
    android:rowCount="6">

    <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:text="@string/main_section_label"
        android:layout_column="0"
        android:layout_row="0"
        android:elevation="1dp"
        android:layout_marginBottom="10dp"
        android:layout_columnSpan="2">
        <requestFocus />
    </TextView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequency"
        android:id="@+id/maxFreq"
        android:layout_row="1"
        android:layout_column="1"
        android:nestedScrollingEnabled="false"
        android:layout_gravity="left" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touchboost"
        android:id="@+id/cbTouchBoost"
        android:layout_column="0"
        android:layout_row="2"
        android:elegantTextHeight="false"
        android:elevation="1dp"
        android:layout_marginBottom="10dp"
        android:layout_columnSpan="2" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="3"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_rowSpan="2"
        android:id="@+id/grTouch">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/cores"
            android:id="@+id/textView2"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/tCores"
            android:layout_row="0"
            android:layout_column="1"
            android:maxLength="1"
            android:width="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tbFrequency"
            android:id="@+id/textView3"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tbFrequency"
            android:id="@+id/tFreq"
            android:layout_column="1"
            android:layout_row="1" />
    </GridLayout>

</GridLayout>
